refactor 🎨: bug fixes and ui localization
Signed-off-by: SDIDSA <zinou.teyar@gmail.com>