@@ -6,14 +6,11 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 import org.json.JSONObject;
+import org.luke.gui.exception.ErrorHandler;
 import org.luke.gui.window.Window;
 import org.luke.jwin.app.JwinActions;
 import org.luke.jwin.app.file.FileDealer;
@@ -24,17 +21,17 @@ import org.luke.jwin.local.ui.Installed;
 
 public class JdkManager {
 
-	private static HashMap<String, String> versionCache = new HashMap<>();
+	private static final HashMap<String, String> versionCache = new HashMap<>();
 
-	private static HashMap<String, String> installable;
+	private static final HashMap<String, String> installable;
 
-	private static HashMap<String, Installed> managedCache = new HashMap<>();
+	private static final HashMap<String, Installed> managedCache = new HashMap<>();
 
-	private static HashMap<File, Installed> localCache = new HashMap<>();
+	private static final HashMap<File, Installed> localCache = new HashMap<>();
 
 	private static final File root = new File(System.getenv("appData") + "\\jwin\\jdk");
 
-	private static HashMap<String, DownloadJob> downloadJobs = new HashMap<>();
+	private static final HashMap<String, DownloadJob> downloadJobs = new HashMap<>();
 
 	static {
 		installable = new HashMap<>();
@@ -93,7 +90,7 @@ public class JdkManager {
 		if (downloadJobs.containsKey(version))
 			return null;
 		DownloadJob job = new DownloadJob(win, version, downloadUrlForVer(version), dirForVer(version),
-				f -> versionFromDir(f).getRoot());
+				f -> Objects.requireNonNull(versionFromDir(f)).getRoot());
 		job.addOnStateChanged(s -> {
 			if (s == DownloadState.DONE || s == DownloadState.CANCELED || s == DownloadState.FAILED) {
 				downloadJobs.remove(version);
@@ -105,7 +102,7 @@ public class JdkManager {
 	}
 
 	public static boolean isValid(String version) {
-		List<String> managedPaths = managedInstalls().stream().map(File::getAbsolutePath).collect(Collectors.toList());
+		List<String> managedPaths = managedInstalls().stream().map(File::getAbsolutePath).toList();
 		return (LocalStore.jdkAdded().contains(version) || managedPaths.contains(version)) && versionOf(version) != null
 				&& new File(version).exists();
 	}
@@ -125,12 +122,12 @@ public class JdkManager {
 	public static List<File> managedInstalls() {
 		ArrayList<File> res = new ArrayList<File>();
 
-		for (File sub : root.listFiles()) {
+		for (File sub : Objects.requireNonNull(root.listFiles())) {
 			res.add(sub);
 
 			String vers = versionOf(sub.getAbsolutePath());
 			if (vers == null) {
-				versionCache.put(sub.getAbsolutePath(), versionFromDir(sub).getVersion());
+				versionCache.put(sub.getAbsolutePath(), Objects.requireNonNull(versionFromDir(sub)).getVersion());
 			}
 		}
 
@@ -177,7 +174,7 @@ public class JdkManager {
 	}
 
 	public static List<LocalInstall> allInstalls() {
-		ArrayList<LocalInstall> inst = new ArrayList<LocalInstall>();
+		ArrayList<LocalInstall> inst = new ArrayList<>();
 
 		managedInstalls().forEach(f -> inst.add(versionFromDir(f)));
         inst.addAll(localInstalls());
@@ -188,14 +185,15 @@ public class JdkManager {
 	}
 
 	public static LocalInstall maxVersion() {
-		return allInstalls().getFirst();
+		List<LocalInstall> installs = allInstalls();
+		return installs.isEmpty() ? null : allInstalls().getFirst();
 	}
 
 	public static LocalInstall versionFromDir(File file) {
 		if (file.listFiles() == null) {
 			return null;
 		}
-		for (File sf : file.listFiles()) {
+		for (File sf : Objects.requireNonNull(file.listFiles())) {
 			if (sf.isDirectory()) {
 				LocalInstall version = versionFromDir(sf);
 				if (version != null) {
@@ -213,7 +211,7 @@ public class JdkManager {
 
 					return new LocalInstall(root, version);
 				} catch (IOException e) {
-					e.printStackTrace();
+					ErrorHandler.handle(e, "parse jdk version from dir");
 				}
 			}
 		}
